[package]
name = "sod-mpsc"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod-mpsc"
description = "Service Oriented Design - Multi Producer Single Consumer"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
sod = "0.2.1"
